--- a/configs/homepage.yaml
+++ b/configs/homepage.yaml
@@ -12,7 +12,7 @@ configMaps:
 
 config:
   settings:
-    headerStyle: boxed
+    headerStyle: boxedWidgets
     title: Myc's homelab
     background: https://images.unsplash.com/photo-1502790671504-542ad42d5189?auto=format&fit=crop&w=2560&q=80
     providers:
@@ -171,7 +171,9 @@ config:
     - datetime:
         text_size: xl
         format:
+          dateStyle: short
           timeStyle: short
+          hour12: false
     - openmeteo:
         label: Paris
         latitude: 48.8575
