--- a/versions.yaml
+++ b/versions.yaml
@@ -59,3 +59,6 @@ images:
   thomseddon/traefik-forward-auth: 2.2.0
   vaultwarden/server: 1.30.5
   wallabag/wallabag: 2.6.9
+patterns:
+  images:
+    redis: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
