--- a/versions.yaml
+++ b/versions.yaml
@@ -62,3 +62,4 @@ images:
 patterns:
   images:
     redis: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
+    sissbruecker/linkding: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
