--- a/.drone.yml
+++ b/.drone.yml
@@ -8,6 +8,9 @@ trigger:
   event:
   - push
 
+limit:
+  concurrency: 1
+
 steps:
 - name: build on main
   image: git.mkz.me/mycroft/golang-cdk8s:latest
