--- a/versions.yaml
+++ b/versions.yaml
@@ -55,6 +55,7 @@ images:
   privatebin/nginx-fpm-alpine: latest
   registry.gitlab.com/timvisee/send: latest
   registry.mkz.me/mycroft/whatismyip: 5
+  requarks/wiki: 2.5.303
   redis: 7.2.5
   sissbruecker/linkding: 1.31.0
   thomseddon/traefik-forward-auth: 2.2.0
