fix(temporal): fix image repository

--- a/configs/temporal.yaml
+++ b/configs/temporal.yaml
@@ -31,7 +31,7 @@ server:
 
 web:
   image:
-    repository: temporalio/server
+    repository: temporalio/ui
     tag: 2.30.2
   ingress:
     enabled: true
