--- a/configs/cert-manager.yaml
+++ b/configs/cert-manager.yaml
@@ -1,5 +1,8 @@
 # https://github.com/cert-manager/cert-manager/blob/master/deploy/charts/cert-manager/values.yaml
 
+crds:
+  enabled: true
+
 prometheus:
   enabled: true
   servicemonitor:
