--- a/versions.yaml
+++ b/versions.yaml
@@ -46,6 +46,7 @@ images:
   excalidraw/excalidraw: latest
   freshrss/freshrss: 1.24.3
   ghcr.io/gchq/cyberchef: 10.19.2
+  ghcr.io/thomiceli/opengist: 1.7.5
   jhaals/yopass: 11.17.0
   linuxserver/bookstack: v24.10-ls167
   linuxserver/heimdall: v2.5.7-ls238
