--- a/versions.yaml
+++ b/versions.yaml
@@ -67,6 +67,7 @@ images:
 patterns:
   images:
     ghcr.io/open-webui/open-webui: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
+    neosmemo/memos: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     redis: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     sissbruecker/linkding: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     vaultwarden/server: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
