fix: set podAntiAffinity to empty after upstream change

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -49,6 +49,8 @@ alertmanager:
     useExistingSecret: true
     configSecret: alertmanager-config
 
+    podAntiAffinity: ""
+
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
