--- a/versions.yaml
+++ b/versions.yaml
@@ -55,7 +55,7 @@ images:
   paulbouwer/hello-kubernetes: 1.10.1
   paperlessngx/paperless-ngx: 2.13.5
   pawelmalak/snippet-box: latest
-  privatebin/nginx-fpm-alpine: latest
+  privatebin/nginx-fpm-alpine: 1.7.5
   registry.gitlab.com/timvisee/send: latest
   registry.mkz.me/mycroft/whatismyip: 5
   requarks/wiki: 2.5.305
