--- a/versions.yaml
+++ b/versions.yaml
@@ -56,7 +56,7 @@ images:
   paperlessngx/paperless-ngx: 2.13.5
   pawelmalak/snippet-box: latest
   privatebin/nginx-fpm-alpine: 1.7.5
-  registry.gitlab.com/timvisee/send: latest
+  registry.gitlab.com/timvisee/send: v3.4.23
   registry.mkz.me/mycroft/whatismyip: 5
   requarks/wiki: 2.5.305
   redis: 7.4.1
