--- a/versions.yaml
+++ b/versions.yaml
@@ -44,6 +44,7 @@ images:
   docker.l5d.io/buoyantio/emojivoto-voting-svc: v12
   excalidraw/excalidraw: latest
   freshrss/freshrss: 1.24.3
+  ghcr.io/diced/zipline: 3.7.10
   ghcr.io/gchq/cyberchef: 10.19.4
   ghcr.io/open-webui/open-webui: 0.4.8
   ghcr.io/thomiceli/opengist: 1.8.4
