--- a/versions.yaml
+++ b/versions.yaml
@@ -46,6 +46,7 @@ images:
   freshrss/freshrss: 1.25.0
   ghcr.io/diced/zipline: 3.7.11
   ghcr.io/gchq/cyberchef: 10.19.4
+  ghcr.io/hoarder-app/hoarder: 0.21.0
   ghcr.io/open-webui/open-webui: 0.5.7
   ghcr.io/thomiceli/opengist: 1.8.4
   jhaals/yopass: 11.17.0
