fix(workflow): adding debug

--- a/.gitea/workflows/check-versions.yaml
+++ b/.gitea/workflows/check-versions.yaml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - name: Build cdk8s charts
         run: |
+          cdk8s --version
           cdk8s import
           git diff
           git checkout cdk8s.yaml
