fix(loki): Removing prometheus label
It is breaking 6.25.1 loki release for some reason.

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -39,7 +39,7 @@ monitoring:
     metricsInstance:
       enabled: false
 
-gateway:
-  service:
-    labels:
-      prometheus.io/service-monitor: "false"
+# gateway:
+#   service:
+#     labels:
+#       prometheus.io/service-monitor: "false"
