fix: set a kubectl image tag

--- a/configs/kube-prometheus-stack.yaml
+++ b/configs/kube-prometheus-stack.yaml
@@ -3,6 +3,10 @@
 crds:
   upgradeJob:
     enabled: true
+    kubectl:
+      registry: registry.k8s.io
+      repository: kubectl
+      tag: v1.31.4
 
 prometheus:
   prometheusSpec:
