fix(vikunja): fix configuration, test 3

--- a/configs/vikunja/config.yaml
+++ b/configs/vikunja/config.yaml
@@ -11,7 +11,7 @@ mailer:
   enabled: false
 
 metrics:
-  enabled: true
+  enabled: false
 
 auth:
   local:
@@ -21,3 +21,8 @@ auth:
     enabled: true
     providers:
       - name: AUTHENTIK
+        scope: openid email profile
+        authurl: ~
+        logouturl: ~
+        clientid: ~
+        clientsecret: ~
