--- a/versions.yaml
+++ b/versions.yaml
@@ -72,6 +72,7 @@ patterns:
     ghcr.io/open-webui/open-webui: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     ghcr.io/diced/zipline: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     neosmemo/memos: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
+    paperlessngx/paperless-ngx: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     redis: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     sissbruecker/linkding: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     vaultwarden/server: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
