--- a/.gitea/workflows/check-versions.yaml
+++ b/.gitea/workflows/check-versions.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: registry.mkz.me/mycroft/golang-cdk8s:latest
-      options: --pull always
+      pull: always
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
