--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: registry.mkz.me/mycroft/golang-cdk8s:latest
-      options: --pull always
+      pull: always
 
     steps:
       - name: Check out repository code
