fix: settings bucketNames to loki
I'll eventually succeed to use the correct parameter here.

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -14,7 +14,7 @@ loki:
       schema: v13
   storage:
     type: filesystem
-    bucketName:
+    bucketNames:
       chunks: loki_chunks
       ruler: loki_ruler
       admin: loki_admin
