--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -3,6 +3,8 @@ loki:
   auth_enabled: false
   commonConfig:
     replication_factor: 1
+  limits_config:
+    retention_period: 336h
   schemaConfig:
     configs:
     - from: 2024-01-01
