loki: disable test, canary

--- a/configs/loki.yaml
+++ b/configs/loki.yaml
@@ -45,6 +45,12 @@ monitoring:
     metricsInstance:
       enabled: false
 
+lokiCanary:
+  enabled: false
+
+test:
+  enabled: false
+
 # gateway:
 #   service:
 #     labels:
