feat: add kubectl image configuration to velero
Configures kubectl container image to use Bitnami's public ECR repository with latest tag.

--- a/configs/velero.yaml
+++ b/configs/velero.yaml
@@ -36,3 +36,8 @@ upgradeJobResources:
   limits:
     cpu: 100m
     memory: 1024Mi
+
+kubectl:
+  image:
+    repository: public.ecr.aws/bitnami/kubectl
+    tag: latest
