fix: enabling postgresql
For some reason, thing was set to false. Now, in 3.0.0, db config is no
longer passed to pod.

--- a/configs/wikijs.yaml
+++ b/configs/wikijs.yaml
@@ -32,7 +32,7 @@ ingress:
       secretName: secret-tls-www
 
 postgresql:
-  enabled: false
+  enabled: true
   ssl: false
   postgresqlHost: postgres-instance.postgres
   postgresqlPort: 5432
