--- a/versions.yaml
+++ b/versions.yaml
@@ -76,3 +76,5 @@ patterns:
     redis: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     sissbruecker/linkding: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
     vaultwarden/server: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
+  helmcharts:
+    temporal/temporal: "^[0-9]+\\.[0-9]+(\\.[0-9]+)?$"
